Fix ladder spacing

--- a/src/pages/ladders/ladders.scss
+++ b/src/pages/ladders/ladders.scss
@@ -2,4 +2,6 @@
     h4 a {
         color: black;
     }
+
+    margin: 10px 0;
 }
